--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -803,7 +803,7 @@ strong * {
 				color: #ffffff;
 				font-family: "Druk-Medium";
 				font-size: clamp(60px, -256.2px + 0.527 * 100vw, 350px);
-				line-height: 1;
+				line-height: 0.9;
 				font-weight: 500;
 				width: 900px;
 				max-width: 100%;
@@ -1119,7 +1119,10 @@ strong * {
 .site-footer__logo-column__two .email,
 .site-footer__logo-column__two .content__link {
 				margin-right: 30px;
-				font-size: 20px;
+				font-size: 16px;
+				/* 	@include responsive('desktop-m') {
+					font-size: 16px;
+				} */
 }
 @media only screen and (max-width: 1500px) {
 				.site-footer__logo-column__two .copyright,
@@ -1136,14 +1139,6 @@ strong * {
 				.site-footer__logo-column__two .content__link {
 								margin-bottom: 20px;
 								margin-right: 0;
-				}
-}
-@media only screen and (max-width: 1260px) {
-				.site-footer__logo-column__two .copyright,
-				.site-footer__logo-column__two .direccion,
-				.site-footer__logo-column__two .email,
-				.site-footer__logo-column__two .content__link {
-								font-size: 18px;
 				}
 }
 .site-footer__logo-column__two .copyright a,
@@ -2138,7 +2133,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				        transition-delay: 0.4s;
 }
 .text-papper .content__link__text {
-				font-size: clamp(26px, 17px + 0.015 * 100vw, 34px);
+				font-size: clamp(24px, 13.2px + 0.018 * 100vw, 34px);
 				font-family: "Calluna";
 				color: #000;
 				font-weight: 400;
@@ -2147,7 +2142,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				margin-right: 10px;
 }
 .text-papper .content__link a {
-				font-size: clamp(26px, 17px + 0.015 * 100vw, 34px);
+				font-size: clamp(24px, 13.2px + 0.018 * 100vw, 34px);
 				text-decoration: none;
 				color: #3ACBED;
 				text-transform: capitalize;
@@ -2263,7 +2258,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .accordion--faqs::before {
 				content: "";
-				background: url(images/icons/barra.svg) no-repeat center/contain;
+				background: url(images/icons/barra.svg) no-repeat bottom left/contain;
 				display: inline-block;
 				position: absolute;
 				top: auto;
@@ -2274,8 +2269,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 @media only screen and (max-width: 768px) {
 				.accordion--faqs::before {
-								width: 100%;
-								bottom: 99%;
+								width: 85%;
+								bottom: 100%;
 				}
 }
 
@@ -2285,12 +2280,12 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 @media only screen and (max-width: 1500px) {
 				.image-text {
-								margin-bottom: 200px;
+								margin-bottom: 100px;
 				}
 }
 @media only screen and (max-width: 1050px) {
 				.image-text {
-								margin-bottom: 100px;
+								margin-bottom: 0;
 				}
 }
 .image-text::after {
