--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -73,6 +73,10 @@
         font-style: italic;
         display: none;
 
+        @include responsive('desktop-l') {
+            font-size: 18px;
+        }
+
         @include responsive('mobile-h') {
             padding: 0 0 20px 0;
         }
