--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -38,4 +38,5 @@ Text Domain: palermo
 'blocks/image-text',
 'blocks/_number-grid',
 'blocks/_slider-links',
-'blocks/_error-404';
+'blocks/_error-404',
+'blocks/_instagram';
