--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -2885,6 +2885,55 @@ Blocks Styles
 								height: 5px;
 				}
 }
+.editor-styles-wrapper .acf-block-preview .instagram {
+				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+}
+.editor-styles-wrapper .acf-block-preview .instagram .content .title {
+				font-size: clamp(45px, 12px + 0.055 * 100vw, 75px);
+				font-weight: 400;
+				font-family: "Bebas Neue", sans-serif;
+				color: #ffffff;
+				line-height: 1;
+				max-width: 100%;
+				text-align: center;
+				margin-bottom: 25px;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
+}
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .instagram .content .title {
+								max-width: 100%;
+								margin-top: 0;
+				}
+}
+@media only screen and (max-width: 1680px) {
+				.editor-styles-wrapper .acf-block-preview .instagram .content .title {
+								font-size: 55px;
+				}
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .instagram .content .title {
+								font-size: 45px;
+				}
+}
+.editor-styles-wrapper .acf-block-preview .instagram .content__description {
+				margin: 0 auto;
+				width: 100%;
+				text-align: center;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
+}
 .editor-styles-wrapper .wp-block {
 				overflow: hidden;
 }
