--- a/wp-content/themes/gtoken/scss/components/_menu.scss
+++ b/wp-content/themes/gtoken/scss/components/_menu.scss
@@ -325,6 +325,10 @@
 				span {
 					color: $white;
 
+					@include responsive('tablet-h') {
+						color: $black;
+					}
+
 					&:hover {
 						opacity: 0.8;
 						color: $pink-color;
