--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -659,6 +659,11 @@ strong * {
 .header .site-menu .poylang a span {
 				color: #ffffff;
 }
+@media only screen and (max-width: 1050px) {
+				.header .site-menu .poylang a span {
+								color: #000;
+				}
+}
 .header .site-menu .poylang a span:hover {
 				opacity: 0.8;
 				color: #FB3BA5;
@@ -2944,14 +2949,12 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				line-height: 1;
 				max-width: 100%;
 				text-align: center;
-				margin-bottom: 25px;
+				margin-bottom: 40px;
 				opacity: var(--fade-opacity, 0);
 				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
 				        transform: var(--fade-transform, translateX(0) translateY(100px));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-				-webkit-transition-delay: 0.2s;
-				        transition-delay: 0.2s;
 }
 @media only screen and (max-width: 1500px) {
 				.instagram .content .title {
