--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -1178,10 +1178,7 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .email,
 .editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .content__link {
 				margin-right: 30px;
-				font-size: 16px;
-				/* 	@include responsive('desktop-m') {
-					font-size: 16px;
-				} */
+				font-size: 13px;
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .copyright,
@@ -2187,6 +2184,7 @@ Blocks Styles
 				.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question {
 								padding: 30px 0;
 								gap: 20px;
+								line-height: 1.4;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question::after {
@@ -2898,7 +2896,7 @@ Blocks Styles
 				font-size: clamp(45px, 12px + 0.055 * 100vw, 75px);
 				font-weight: 400;
 				font-family: "Bebas Neue", sans-serif;
-				color: #ffffff;
+				color: #231F20;
 				line-height: 1;
 				max-width: 100%;
 				text-align: center;
