--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -22,6 +22,7 @@
         @include responsive('tablet-h') {
             padding: 30px 0;
             gap: 20px;
+            line-height: 1.4;
         }
 
         &::after {
