--- a/wp-content/themes/gtoken/scss/blocks/_instagram.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_instagram.scss
@@ -8,7 +8,7 @@
             //font-weight: 700;
             font-weight: 400;
             font-family: $secondary-font;
-            color: $white;
+            color: $light-black;
             line-height: 1;
             max-width: 100%;
             text-align: center;
