--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -45,6 +45,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
+                @include responsive('mobile-h') {
+                    display: block;
+                }
             }
         }
 
