--- a/wp-content/themes/gtoken/scss/blocks/_instagram.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_instagram.scss
@@ -1,6 +1,6 @@
 .instagram {
     padding-top: rv(60px, 100px);
-    padding-bottom: rv(60px, 100px);
+    //padding-bottom: rv(60px, 100px);
 
     .content {
         .title {
