--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -80,11 +80,12 @@ Blocks Styles
 				Se usa igual que fade, pero crea un loop para animar los elementos de forma ordenada
 				*/
 				/* Text Block Custom Style */
-				@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap"); /*!
- * Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license (Commercial License)
- * Copyright 2022 Fonticons, Inc.
- */
+				@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap");
+				/*!
+				 * Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com
+				 * License - https://fontawesome.com/license (Commercial License)
+				 * Copyright 2022 Fonticons, Inc.
+				 */
 				/**
 				 * Swiper 9.0.5
 				 * Most modern mobile touch slider and framework with hardware accelerated transitions
@@ -130,10 +131,7 @@ Blocks Styles
 }
 @font-face {
 				font-family: "Calluna";
-				@folder : "Calluna/regular";
-				@name : "Calluna-Regular";
-				src: url("@{base-url}/@{folder}/@{name}.eot");
-				src: url("@{base-url}/@{folder}/@{name}.eot?#iefix") format("embedded-opentype"), url("@{base-url}/@{folder}/@{name}.woff") format("woff"), url("@{base-url}/@{folder}/@{name}.ttf") format("truetype"), url("@{base-url}/@{folder}/@{name}.svg#") format("svg");
+				src: url("./fonts/calluna/Calluna-Regular.woff") format("woff"), url("./fonts/calluna/Calluna-Regular.svg") format("svg"), url("./fonts/calluna/Calluna-Regular.ttf") format("ttf");
 				font-weight: normal;
 				font-style: normal;
 				font-display: swap;
