--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -63,10 +63,7 @@ Se usa igual que fade, pero crea un loop para animar los elementos de forma orde
 }
 @font-face {
 				font-family: "Calluna";
-				@folder : "Calluna/regular";
-				@name : "Calluna-Regular";
-				src: url("@{base-url}/@{folder}/@{name}.eot");
-				src: url("@{base-url}/@{folder}/@{name}.eot?#iefix") format("embedded-opentype"), url("@{base-url}/@{folder}/@{name}.woff") format("woff"), url("@{base-url}/@{folder}/@{name}.ttf") format("truetype"), url("@{base-url}/@{folder}/@{name}.svg#") format("svg");
+				src: url("./fonts/calluna/Calluna-Regular.woff") format("woff"), url("./fonts/calluna/Calluna-Regular.svg") format("svg"), url("./fonts/calluna/Calluna-Regular.ttf") format("ttf");
 				font-weight: normal;
 				font-style: normal;
 				font-display: swap;
