--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -420,6 +420,9 @@ Blocks Styles
 				display: -ms-flexbox;
 				display: flex;
 				gap: 40px;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
 				-webkit-transition: -webkit-transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: -webkit-transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -2242,7 +2245,7 @@ Blocks Styles
 								font-size: 18px;
 				}
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1050px) {
 				.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__answer {
 								padding: 0 0 20px 0;
 				}
