--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -78,7 +78,7 @@
             font-size: 18px;
         }
 
-        @include responsive('mobile-h') {
+        @include responsive('tablet-h') {
             padding: 0 0 20px 0;
         }
     }
