--- a/wp-content/themes/gtoken/scss/components/_menu.scss
+++ b/wp-content/themes/gtoken/scss/components/_menu.scss
@@ -21,6 +21,7 @@
 		right: 90px;
 		display: flex;
 		gap: 40px;
+		align-items: center;
 		transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 
 		@include responsive('tablet-h') {
