--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -32,7 +32,7 @@
                     width: 300px;
                     height: 120px;
                     object-fit: contain;
-                    float: left;
+                    //float: left;
                     margin-bottom: 20px;
 
                     @include responsive('mobile-h') {
